2007-09-09  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* test/unit/rope_test.cpp, stlport/stl/_rope.h: test for
	bug #1788615 [bug during copy of rope's iterator] and fix;
	suggested by John Maddock.

	* stlport/stl/_algobase.c: symmetry not required for
	comparator in case of two different sequences comparison or
	searching; symmetrical comparator just may not exist;

	* stlport/stl/debug/_hashtable.h: symmetry not required for
	comparator in hashtable in case of containers extention;
	symmetrical comparator just may not exist;

	* test/unit/alg_test.cpp: test for problem above, thanks
	Oleg Obolenskiy.

	* unit tests: Linux 2.6.16.26 (athlon-4), gcc 4.1.1, glibc 2.3.6
	"OK 392 tests" for release-shared and stldbg-shared targets.

2007-09-06  Francois Dumont  <dums@users.sourceforge.net>

	* test/unit/strstream_buffer_read_test.cpp: Remove useless
	strdup call that was moreover introducing a memory leak.

2007-09-04  Francois Dumont  <dums@users.sourceforge.net>

	* src/allocators.cpp: Fix implementation of _S_chunk_dealloc when
	lock free implementation is not in use. Thanks bug report 1787636
	from Sergej Zagursky.

2007-08-31  Francois Dumont  <dums@users.sourceforge.net>

	* stlport/stl/_cstdio.h, _ctime.h: Add missing macro definition
	test before using _WIN32_WCE thanks bug report 1784174.

	* stlport/stl/_bitset.h: Change macro tests in order to check
	macro definition before using it thanks bug report 1785679.

	* test/unit/bitset_test.cpp: Bitset::iostream new test to check
	correct input/output of bitset class.

	* build/Makefiles/gmake/gcc.mak: Add -Wundef gcc option when building
	with gcc under Cygwin MinGW, it is an interesting option to detect
	macro check errors.

2007-08-26  Francois Dumont  <dums@users.sourceforge.net>

	* stlport/stl/config/user_config.h, host.h: Moved the administrative
	_STLP_USE_DEFAULT_FILE_OFFSET macro from user_config.h to host.h.

	* stlport/stl/config/_gcc.h: Under MinGW we now use C symbols in