@@ -1,3 +1,14 @@
+2007-09-10  Petr Ovtchenkov  <complement@users.sourceforge.net>
+
+	* stlport/stl/_string.c: fix bugs in string rfind, find_last_of,
+	find_last_not_of [bug #1788700, position 0 was wrongly excluded];
+
+	* test/unit/string_test.cpp: test for problems above. Thanks
+	to Bred Bored for bug report and initial test.
+
+	* unit tests: Linux 2.6.16.26 (athlon-4), gcc 4.1.1, glibc 2.3.6
+	"OK 395 tests" for release-shared and stldbg-shared targets.
+
 2007-09-09  Petr Ovtchenkov  <complement@users.sourceforge.net>
 
 	* test/unit/rope_test.cpp, stlport/stl/_rope.h: test for
@@ -14,9 +25,6 @@
 
 	* test/unit/alg_test.cpp: test for problem above, thanks
 	Oleg Obolenskiy.
-
-	* unit tests: Linux 2.6.16.26 (athlon-4), gcc 4.1.1, glibc 2.3.6
-	"OK 392 tests" for release-shared and stldbg-shared targets.
 
 2007-09-06  Francois Dumont  <dums@users.sourceforge.net>
 
